kyverno-admission-control/policies/add-seccomp.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-seccomp-runtime-default
spec:
  background: true
  rules:
    - name: add-runtime-default-seccomp
      match:
        any:
          - resources:
              kinds:
                - Deployment
      mutate:
        patchStrategicMerge:
          spec:
            template:
              spec:
                securityContext:
                  +(seccompProfile):
                    +(type): RuntimeDefault
