kyverno-admission-control/policies/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: privileged-containers-are-forbidden
      match:
        any:
          - resources:
              kinds:
                - Deployment
      validate:
        message: Privileged containers are not allowed.
        pattern:
          spec:
            template:
              spec:
                containers:
                  - securityContext:
                      privileged: "false"
