kyverno-admission-control/policies/require-nonroot.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-nonroot
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-pod-nonroot
      match:
        any:
          - resources:
              kinds:
                - Deployment
      validate:
        message: Workloads must run as non-root.
        pattern:
          spec:
            template:
              spec:
                securityContext:
                  runAsNonRoot: true
