kyverno-admission-control/policies/require-runtime-controls.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-runtime-controls
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-resources-and-probes
      match:
        any:
          - resources:
              kinds:
                - Deployment
      validate:
        message: Containers require requests, limits, readiness and liveness probes.
        pattern:
          spec:
            template:
              spec:
                containers:
                  - resources:
                      requests:
                        cpu: "?*"
                        memory: "?*"
                      limits:
                        cpu: "?*"
                        memory: "?*"
                    readinessProbe:
                      httpGet:
                        path: "?*"
                    livenessProbe:
                      httpGet:
                        path: "?*"
